# pybookworm

./: .gitignore  Makefile  pyproject.toml
pybookworm/: cleaner.py  cli.py  converter.py  scraper.py
